# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
GLCore/: CMakeLists.txt  README.md
GLCore/include/GLCore/: App.h  Shader.h  Window.h
GLCore/lib/glad/: CMakeLists.txt
GLCore/lib/glad/include/glad/: glad.h
GLCore/lib/glad/src/: glad.c
GLCore/lib/glm/: CMakeLists.txt
GLCore/src/: App.cpp  Shader.cpp  Window.cpp
LearnOpenGL/: CMakeLists.txt
LearnOpenGL/creating_a_window/: CMakeLists.txt  main.cpp
LearnOpenGL/hello_triangle/: CMakeLists.txt  main.cpp
LearnOpenGL/shaders/: CMakeLists.txt  main.cpp
LearnOpenGL/shaders/assets/: frag.glsl  vert.glsl
cmake/: CopyAssets.cmake
inc/: pch.h  shader.h
projects/getting_started/: CMakeLists.txt
projects/part_I/chapter_shader/: CMakeLists.txt  main.cpp
projects/part_I/chapter_shader/shaders/: triangle.fragmentShader  triangle.vcb  triangle.vertexShader
projects/part_I/hello_window/: main.cpp
projects/part_I/shaders/: CMakeLists.txt  main.cpp
src/: pch.cpp  shader.cpp
src/getting_started/: CMakeLists.txt  getting_started.cpp
